# hybrid-rag

./: .env.example  .gitignore  CLAUDE.md  DESIGN-epic3.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.designs/epic2-ingestion/: design-doc.md
.github/workflows/: ci.yml
.prd-reviews/epic2-ingestion/: ambiguity.md  feasibility.md  gaps.md  prd-draft.md  requirements.md  scope.md  stakeholders.md  state.env
.prd-reviews/z42p6/: ambiguity.md  feasibility.md  gaps.md  requirements.md  scope.md  stakeholders.md
skills/pointy-rag/: SKILL.md
src/pointy_rag/: __init__.py  chunker.py  claude_agent.py  cli.py  config.py  converter.py  db.py  disclosure.py  embeddings.py  graph.py  graph_query.py  ingest.py  llms_txt.py  models.py  pointer_mapper.py  search.py  workspace.py
src/pointy_rag/_skill/: SKILL.md
tests/: conftest.py  test_chunker.py  test_claude_agent.py  test_cli.py  test_converter.py  test_db.py  test_disclosure.py  test_embeddings.py  test_explore.py  test_graph.py  test_graph_query.py  test_ingest.py  test_llms_txt.py  test_models.py  test_pointer_mapper.py  test_search.py  test_workspace.py
