[project]
name = "pointy-rag"
version = "0.1.0"
description = "Hybrid RAG with Voyage AI embeddings and pgvector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
    "voyageai>=0.3.0",
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
pointy-rag = "pointy_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pointy_rag"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "PT", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["pointy_rag"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG002", "N803"]
